pkl-core/src/test/files/LanguageSnippetTests/input/errors/analyzeRelativeModuleUri.pkl
import "pkl:analyze"

result = analyze.importGraph(Set("foo.pkl"))
